--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ h1, h2, h3, h4, h5, h6, figure {
   float: left;
 }
 .fh5co-nav .fh5co-top-logo {
-  width: 20%;
+  /* width: 20%; */
 }
 .fh5co-nav .fh5co-top-menu {
   width: 60%;
@@ -276,7 +276,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .about-content {
-  margin-bottom: 7em;
+  margin-bottom: 3em;
 }
 .about-content img {
   border: 1px solid rgba(0, 0, 0, 0.05);
@@ -386,29 +386,29 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-started,
-#fh5co-author,
-#fh5co-about,
-#fh5co-contact,
 #fh5co-footer {
   padding: 7em 0;
   clear: both;
 }
 
-#fh5co-work {
+#fh5co-work,
+#fh5co-author,
+#fh5co-about,
+#fh5co-contact {
   padding: 3em 0;
   clear: both;
 }
+
 @media screen and (max-width: 768px) {
   #fh5co-started,
-  #fh5co-author,
-  #fh5co-about,
-  #fh5co-contact,
   #fh5co-footer {
     padding: 3em 0;
   }
-  #fh5co-work {
+  #fh5co-work,
+  #fh5co-author,
+  #fh5co-about,
+  #fh5co-contact {
     padding: 1em 0;
-    clear: both;
   }
 }
 
@@ -523,7 +523,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .top-line {
-  padding-bottom: 7em;
+  padding-bottom: 3em;
 }
 .top-line .fh5co-heading {
   margin-bottom: 0 !important;
@@ -568,7 +568,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-heading {
-  margin-bottom: 5em;
+  margin-bottom: 2em;
 }
 .fh5co-heading.fh5co-heading-sm {
   margin-bottom: 2em;
@@ -611,7 +611,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .author {
   width: 100%;
   float: left;
-  margin-bottom: 5em;
+  margin-bottom: 1em;
 }
 .author .author-inner {
   background-size: cover;
@@ -676,7 +676,7 @@ h1, h2, h3, h4, h5, h6, figure {
   background: #cabcab;
 }
 #fh5co-started .fh5co-heading {
-  margin-bottom: 20px !important;
+  margin-bottom: 0px !important;
 }
 #fh5co-started .fh5co-heading h2 {
   color: #fff;
@@ -685,6 +685,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-started .fh5co-heading p {
   color: #685641;
+  margin-bottom: 0px !important;
 }
 #fh5co-started .btn {
   margin-top: 20px;
@@ -1313,10 +1314,19 @@ blockquote .person cite {
 .main-banner .desc{
   display: table-cell;
   vertical-align: middle;
-  padding: 40px;
 }
 
 .main-banner h1{
   color: #ffffff;
+}
+
+@media screen and (max-width: 768px) {
+  .main-banner h1{
+    font-size: 2em;
+  }
+}
+
+.dark-bg {
+  background: #cabcab
 }
 /*# sourceMappingURL=style.css.map */
