--- a/css/style.css
+++ b/css/style.css
@@ -490,10 +490,14 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 768px) {
   .work .work-grid .inner {
+    position: absolute;
+    bottom: 0;
     opacity: 1;
-    background: rgba(237, 235, 232, 0.7);
+    height: auto;
+    background: rgba(237, 235, 232, 0.9);
   }
 }
+
 .work .work-grid .inner .desc {
   display: table-cell;
   vertical-align: middle;
@@ -507,6 +511,17 @@ h1, h2, h3, h4, h5, h6, figure {
   font-weight: bold;
   line-height: 24px;
 }
+
+@media screen and (max-width: 768px) {
+  .work .work-grid .inner .desc {
+    vertical-align: middle;
+    padding: 10px;
+  }
+  .work .work-grid .inner .desc h3 {
+    margin-bottom: 0px;
+  }
+}
+
 .work .work-grid .inner .desc h3 a {
   color: #000;
 }
@@ -1335,3 +1350,22 @@ blockquote .person cite {
   background: #cabcab
 }
 /*# sourceMappingURL=style.css.map */
+
+figcaption {
+  font-size: 16px;
+  font-style: italic;
+  list-style: none;
+  background: rgba(0, 0, 0, 0.05);
+  padding: 8px;
+  margin: 0;
+  color: #828282;
+}
+#project-content img,
+#project-content figure {
+  margin-bottom: 32px;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+#project-content figure img {
+  margin-bottom: 0;
+}
